--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     ],
     "env": {
         "browser": true,
-        "es2021": true,
+        "es2022": true,
         "greasemonkey": true,
         "node": true
     },
@@ -15,7 +15,7 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "sourceType": "module",
-        "ecmaVersion": 2021
+        "ecmaVersion": "latest"
     },
     "overrides": [
         {
