--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
             "./node_modules/@types",
             "./typings.d.ts"
         ],
-        "declaration": true,
-        "declarationDir": "./types"
+        "declaration": false,
     },
     "exclude": [
         "node_modules"
