--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "type":"module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npx rollup --config rollup.config.js",
-        "watch": "npx rollup --config rollup.config.js --watch"
+        "build": "rollup --config rollup.config.js",
+        "watch": "rollup --config rollup.config.js --watch"
     },
     "devDependencies": {
         "@babel/cli": "^7.19.3",
